Get sections data from ajax request

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if sections is not empty %}
-        <div id="sections" data-sections="{{ sections }}"></div>
-    {% endif %}
+    <div id="sections">
+        <div class="placeholder">Загрузка...</div>
+    </div>
 {% endblock %}
