Change sections rendering structure for readability

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="sections">
-        <div class="placeholder">Загрузка...</div>
-    </div>
+    <div id="sections"></div>
 {% endblock %}
