--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #F5F5F5;
     font: 18px sans-serif;
 }
+
 ul {
     margin: 0;
     padding: 0;
@@ -49,9 +50,76 @@ ul {
     border-bottom: 5px solid;
 }
 
-.placeholder {
+.error-block {
     margin: 20px 30px;
+}
+
+.error-text {
+    color: #cf0000;
     font-size: 2rem;
+}
+
+.get-sections {
+    display: block;
+    margin-top: 10px;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #dadada;
+    border: 1px solid #aaaaaa;
+    font: 28px sans-serif;
+}
+
+.get-sections:hover {
+    background-color: #c5c5c5;;
+    color: #ffffff;
+}
+
+.spinner {
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+}
+
+.spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #333;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0)
+    }
+    40% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+    40% {
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+    }
 }
 
 @media (min-width: 768px) {
@@ -73,7 +141,11 @@ ul {
         padding-left: 20px;
     }
 
-    .placeholder {
+    .error-text {
         font-size: 1rem;
+    }
+
+    .get-sections {
+        font-size: 18px;
     }
 }
